--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <header>
+        <div>
+            О нас
+        </div>
         <nav>
             <a href="#services">Услуги</a>
             <a href="#contacts">Контакты</a>
