add contacts menu

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         </div>
         <nav>
             <a href="#services">Услуги</a>
+            <a href="#contacts">Контакты</a>
 
         </nav>
 "Привет"
