--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         </div>
         <nav>
             <a href="#services">Услуги</a>
-
+       <a href="#services">Rjyrnnsd</a>
+                   <a href="#aboutUs">О нас</a>     
         </nav>
 "Привет"
         <div>
