basket delivery options block added

--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
             <a href="#contacts">Контакты</a>
                    <a href="#aboutUs">О нас</a>     
         </nav>
-"Привет"
         <div>
             <a href="tel:+79039059595">+7 903 905-95-95</a>
             <button>Заказать звонок</button>
         </div>
     </header>
-    
+    <h2>Выберите пункт доставки</h2>
 </body>
 </html>
