--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
     <h2>Выберите пункт доставки</h2>
     <button>New button</button>
     <button>Cancel</button>
+    <button>Click</button>
 </body>
 </html>
